manifests/ingress-controller.yml
#       --docker-password='_D08bsXgi1<(SI2KTqd1' \
apiVersion: v1
kind: Namespace
metadata:
  name: oci-lb-ingress-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oci-lb-ingress-controller
  namespace: oci-lb-ingress-controller
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: oci-lb-ingress-controller
      app.kubernetes.io/component: controller
  revisionHistoryLimit: 10
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: oci-lb-ingress-controller
        app.kubernetes.io/component: controller
    spec:
      containers:
        - name: controller
          image: syd.ocir.io/sdz5ctxy4jzk/oci-lb-ingress-controller:latest
          imagePullPolicy: Always
          args:
            - -config=/app/config.yml
            - -ingress-class=oci
            - -controller-name=ingress.beta.kubernetes.io/oci
            # - -default-subnets=${ingress_load_balancer_subnet_ocid}
          resources:
            requests:
              cpu: 50m
              memory: 80Mi
            limits:
              cpu: 500m
              memory: 200Mi
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: oci-lb-ingress-controller-sa
      terminationGracePeriodSeconds: 100
