manifests/ingress-example.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: oci-lb-ingress-example

---
# nginx green
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-green
  namespace: oci-lb-ingress-example
spec:
  selector:
    matchLabels:
      app: nginx-green
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-green
    spec:
      containers:
        - name: nginx-green
          image: nginx
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 200Mi
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html-config-volume
              mountPath: /usr/share/nginx/html
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: html-config-volume
          configMap:
            name: nginx-configs
            items:
              - key: green-index.html
                path: index.html
              - key: green-404.html
                path: 404.html
        - name: nginx-config-volume
          configMap:
            name: nginx-configs
            items:
              - key: default.conf
                path: default.conf
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-green
  namespace: oci-lb-ingress-example
  labels:
    app: nginx-green
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: nginx-green

---
# nginx next
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-blue
  namespace: oci-lb-ingress-example
spec:
  selector:
    matchLabels:
      app: nginx-blue
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-blue
    spec:
      containers:
        - name: nginx-blue
          image: nginx
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 200Mi
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html-config-volume
              mountPath: /usr/share/nginx/html
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: html-config-volume
          configMap:
            name: nginx-configs
            items:
              - key: blue-index.html
                path: index.html
              - key: blue-404.html
                path: 404.html
        - name: nginx-config-volume
          configMap:
            name: nginx-configs
            items:
              - key: default.conf
                path: default.conf
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-blue
  namespace: oci-lb-ingress-example
  labels:
    app: nginx-blue
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: nginx-blue
---
# http-test
# https://hub.docker.com/r/traefik/whoami
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-test
  namespace: oci-lb-ingress-example
spec:
  selector:
    matchLabels:
      app: http-test
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: http-test
    spec:
      containers:
        - name: traefik-whoami
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 200Mi
          image: traefik/whoami
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: http-test
  namespace: oci-lb-ingress-example
  labels:
    app: http-test
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: http-test
---
# INGRESS
# apiVersion: networking.k8s.io/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: oci-lb-ingress-example
  annotations:
    # kubernetes.io/ingress.class: "oci"
    # Below configurations are convered by OCI free tier
    # https://www.oracle.com/in/cloud/free/#always-free
    ingress.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
    ingress.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "10"
    ingress.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "10"

    # ingress.beta.kubernetes.io/oci-load-balancer-subnet1: ocid1.subnet.oc1.ap-sydney-1.aaaaaaaaaaaaaaaaaa
spec:
  ingressClassName: oci
  tls:
    - hosts:
        - www.example.test
        - next.example.test
      secretName: ingress-example-tls-cert
  rules:
    - host: www.example.test
      http:
        paths:
          #  returns the whoami information as JSON.
          - path: /api
            pathType: Exact
            backend:
              service:
                name: http-test
                port:
                  number: 3000

          # serve pages from ngix-www
          - path: /
            pathType: Prefix
            backend:
              # serviceName: nginx
              # servicePort: 80
              service:
                name: nginx-green
                port:
                  number: 80
      http:
        paths:
          # websocket echo
          - path: /echo
            pathType: Exact
            backend:
              service:
                name: http-test
                port:
                  number: 3000

          # /data?size=n[&unit=u]: creates a response with a size n. The unit of measure, if specified,
          #accepts the following values: KB, MB, GB, TB (optional, default: bytes).
          - path: /data
            pathType: Exact
            backend:
              service:
                name: http-test
                port:
                  number: 3000

          # heath check
          #     GET, HEAD, ...: returns a response with the status code defined by the POST
          #     POST: changes the status code of the GET (HEAD, ...) response.
          - path: /health
            pathType: Exact
            backend:
              service:
                name: http-test
                port:
                  number: 3000

    - host: next.example.test
      http:
        paths:
          #  returns the whoami information as JSON.
          - path: /api
            pathType: Exact
            backend:
              service:
                name: http-test
                port:
                  number: 3000

          # serve pages from ngix-blue
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-blue
                port:
                  number: 80
